--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,4 @@
-# File made by Eyad Fattah. DO NOT EDIT.
+# These individuals contributed to the 0x00. AirBnB clone - The console in this repository 
 
-# This file contains the contriubuters to this repository
-
-Eyad Fattah <eyadabdelfattah4@gmail.com>
-YT-BREAKGAMES (Nasreddine Braik) <Nasreddine1999@outlook.com>
+Nasreddine Braik <Nasreddine1999@outlook.com>
+Eyad Abd el fattah <eyadabdelfattah4@gmail.com>
